@@ -9,16 +9,21 @@
 		http://www.springframework.org/schema/osgi http://www.springframework.org/schema/osgi/spring-osgi.xsd
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd">
 
-	<osgi:reference id="packageAdmin"
-		interface="org.osgi.service.packageadmin.PackageAdmin" cardinality="0..1"/>
-
 	<bean id="taskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor" p:threadGroupName="configured-extender" 
 			p:threadNamePrefix="conf-extender-thread" />
 
-	<bean id="shutdownTaskExecutor" class="org.springframework.scheduling.timer.TimerTaskExecutor"/>
+	<bean id="shutdownTaskExecutor" class="org.springframework.core.task.SimpleAsyncTaskExecutor"/>
 	
+	<bean id="applicationEventMulticaster" class="org.springframework.osgi.extender.internal.support.DummyApplicationEventMulticaster"/>
+	
+	<bean id="applicationContextCreator" class="org.springframework.osgi.extender.internal.support.DummyContextCreator"/>
+	
+	<bean id="someProcessor" class="org.springframework.osgi.extender.internal.support.DummyProcessor"/>
+	 
 	<util:properties id="extenderProperties">
 		<prop key="smth">bla</prop>
-		<prop key="dependencies.wait.time">180</prop>
+		<prop key="dependencies.wait.time">200</prop>
+		<prop key="shutdown.wait.time">300</prop>
+		<prop key="process.annotations">true</prop>
 	</util:properties>
 </beans>
