@@ -25,6 +25,7 @@ Package org.springframework.osgi.extender
 * added support for install.context.error.handler property
 * changed namespace handlers lifecycle to depend on bundle events STARTED/STOPPED instead of RESOLVED/UNRESOLVED
 * removed type compatibility check for custom namespace handlers as it caused false warnings in some cases
++ add extender configuration setting for controlling the default bundle service dependency wait time
 
 Package org.springframework.osgi.io
 * improved OsgiBundleResource#getFile() file detection method
